--- a/hartree_fock.ipynb
+++ b/hartree_fock.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (molecule.py, line 74)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (molecule.py, line 209)",
      "output_type": "error",
      "traceback": [
       "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
       "  File \u001b[0;32m\"A:\\Apps\\MicroConda\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3267\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-0fbe4a2df107>\"\u001b[1;36m, line \u001b[1;32m4\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from molecule import molecule\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\garyz\\Research\\CatLab_CompChem\\molecule.py\"\u001b[1;36m, line \u001b[1;32m74\u001b[0m\n\u001b[1;33m    def multiply(guassian):\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-91cae6c433cd>\"\u001b[1;36m, line \u001b[1;32m6\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from molecule import atom\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\garyz\\Research\\CatLab_CompChem\\molecule.py\"\u001b[1;36m, line \u001b[1;32m209\u001b[0m\n\u001b[1;33m    for atom in range(len(self.atomData))::\u001b[0m\n\u001b[1;37m                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -23,41 +21,29 @@
     "#Python Implementation of the Hartree Fock Method\n",
     "#Procedures listed in the code follow as described in Modern Quantum Chemistry: Introduction to Advanced Electronic Structure Theory, By Attila Szabo and Neil S. Ostlund\n",
     "\n",
-    "from molecule import molecule\n",
-    "from molecule import atom\n",
+    "import math\n",
     "import numpy as np\n",
-    "import integrals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'molecule' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-8be2de433998>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#generate a sole hydrogen ion with 2 electrons\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mhydrogenIon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmolecule\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mhydrogenIon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddAtom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0matom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'molecule' is not defined"
-     ]
-    }
-   ],
-   "source": [
+    "from molecule import atom\n",
+    "from molecule import vector\n",
+    "from molecule import guassian\n",
+    "from molecule import molecule\n",
+    "import integrals\n",
+    "\n",
+    "#print(g3.constant * pow((math.pi/g3.orbitalExponet), 3/2))\t\n",
+    "\n",
     "#Step 1\n",
     "#Specify Molecules, Nuclear Coordinates, and Charge of the nucli Number of Electrons,\n",
     "\n",
-    "#generate a sole hydrogen ion with 2 electrons\n",
-    "hydrogenIon = molecule()\n",
-    "hydrogenIon.addAtom(atom([0,0,0], 1, 2))\n",
+    "#generate an h2 atom with a distance of 1.4 AU to compare with Szabo pg. 175\n",
+    "h2 = molecule()\n",
+    "h2.addAtom(atom(vector(), 1, 1))\n",
+    "h2.addAtom(atom(vector(.5,.5, 1.208304597), 1, 1))\n",
+    "#h2.addAtom(atom(vector(5,0,0),1,1))\n",
+    "h2.addBasis(\"STO-3G\")\n",
     "\n",
-    "moleculerSystem = hydrogenIon\n",
+    "print(len(h2.atomData[1].basisSet.contractedGuassians))\n",
     "\n",
-    "#and a basis set, for now will add default basis of STO-3G for hydrogen to all atoms\n",
-    "moleculerSystem.addBasis(\"STO-3G\")"
+    "#and a basis set, for now will add default basis of STO-3G for hydrogen to all atoms\n"
    ]
   },
   {
@@ -69,9 +55,9 @@
     "\n",
     "#Step 2\n",
     "#Calculate Integrals\n",
-    "#Overlap, KE, Nuclear Attraaction, Electronb Repulsion\n",
-    "S = integrals.overlap(molecule)\n",
-    "print(S)"
+    "#Overlap, KE, Nuclear Attraaction, Electronb \n",
+    "S = integrals.overlap(h2)\n",
+    "print(np.matrix(S))"
    ]
   },
   {
