--- a/hartree_fock.ipynb
+++ b/hartree_fock.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Python Implementation of the Hartree Fock Method\n",
     "#Procedures listed in the code follow as described in Modern Quantum Chemistry: Introduction to Advanced Electronic Structure Theory, By Attila Szabo and Neil S. Ostlund\n",
@@ -32,12 +24,10 @@
     "\n",
     "#generate an h2 atom with a distance of 1.4 AU to compare with Szabo pg. 175\n",
     "h2 = molecule()\n",
-    "h2.addAtom(atom(vector(), 1, 1))\n",
-    "h2.addAtom(atom(vector(.5,.5, 1.208304597), 1, 1))\n",
+    "h2.addAtom(atom(vector(1,1,1), 1, 1))\n",
+    "h2.addAtom(atom(vector(1,1,2.4), 2, 1))\n",
     "#h2.addAtom(atom(vector(5,0,0),1,1))\n",
     "h2.addBasis(\"STO-3G\")\n",
-    "\n",
-    "print(len(h2.atomData[1].basisSet.contractedGuassians))\n",
     "\n",
     "#and a basis set, for now will add default basis of STO-3G for hydrogen to all atoms\n"
    ]
@@ -55,7 +45,14 @@
       " [0.6593182  0.99999999]]\n",
       "\n",
       "[[0.76003188 0.23645465]\n",
-      " [0.23645465 0.76003188]]\n"
+      " [0.23645465 0.76003188]]\n",
+      "\n",
+      "\n",
+      "[[-2.94351086 -1.42062114]\n",
+      " [-2.40085071 -2.94351086]]\n",
+      "\n",
+      "[[-3.8795889  -1.96811926]\n",
+      " [-4.27864117 -3.8795889 ]]\n"
      ]
     }
    ],
@@ -69,9 +66,14 @@
     "\n",
     "T = integrals.kineticEnergy(h2)\n",
     "print()\n",
-    "print(np.matrix(KE))\n",
+    "print(np.matrix(T))\n",
     "\n",
     "V = integrals.nuclearAttraction(h2)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(np.matrix(V[0]))\n",
+    "print()\n",
+    "print(np.matrix(V[1]))\n",
     "\n",
     "\n",
     "\n"
@@ -84,7 +86,7 @@
    "outputs": [],
    "source": [
     "#Step 3\n",
-    "#Dignolize Overlap Matrix and Obtain transformation matrix X\n"
+    "#Dignolize Overlap Matrix and Obtain transformation matrix X"
    ]
   },
   {
