Adds working electron-nuclear attraction integral with messy code

--- a/hartree_fock.ipynb
+++ b/hartree_fock.ipynb
@@ -24,8 +24,8 @@
     "\n",
     "#generate an h2 atom with a distance of 1.4 AU to compare with Szabo pg. 175\n",
     "h2 = molecule()\n",
-    "h2.addAtom(atom(vector(1,1,1), 1, 1))\n",
-    "h2.addAtom(atom(vector(1,1,2.4), 2, 1))\n",
+    "h2.addAtom(atom(vector(9,9,10.4), 1, 1))\n",
+    "h2.addAtom(atom(vector(9,9,9), 1, 1))\n",
     "#h2.addAtom(atom(vector(5,0,0),1,1))\n",
     "h2.addBasis(\"STO-3G\")\n",
     "\n",
@@ -46,13 +46,229 @@
       "\n",
       "[[0.76003188 0.23645465]\n",
       " [0.23645465 0.76003188]]\n",
+      "GB Len = 3\n",
       "\n",
+      "X: 9 Y: 9 Z: 10.4\n",
       "\n",
-      "[[-2.94351086 -1.42062114]\n",
-      " [-2.40085071 -2.94351086]]\n",
+      "X: 9 Y: 9 Z: 10.4\n",
       "\n",
-      "[[-3.8795889  -1.96811926]\n",
-      " [-4.27864117 -3.8795889 ]]\n"
+      "X: 9 Y: 9 Z: 10.4\n",
+      "-------------------------------------\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 0\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 0 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 0\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "Atom: 0 Index1: 1 Index2: 1\n",
+      "GB Len = 3\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "-------------------------------------\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.4\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.4000000000000004\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.4\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.4000000000000004\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.399999999999999\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.3999999999999986\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.4\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.4000000000000004\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.4\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.4000000000000004\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.399999999999999\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.3999999999999986\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.399999999999999\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.3999999999999986\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.399999999999999\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.3999999999999986\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 0\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 10.4\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "1.4000000000000004\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 0 Index2: 1\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 0\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "Atom: 1 Index1: 1 Index2: 1\n",
+      ">>>>>>>>>>>>>>>>>>>>>>>>\n",
+      "\n",
+      "X: 9.0 Y: 9.0 Z: 9.0\n",
+      "\n",
+      "X: 9 Y: 9 Z: 9\n",
+      "0.0\n",
+      "<<<<<<<<<<<<<<<<<<<<<<<<\n",
+      "\n",
+      "[[-0.4352188  -0.5974173 ]\n",
+      " [-0.5974173  -0.65382715]]\n",
+      "\n",
+      "[[-1.22661372 -0.58908012]\n",
+      " [-0.58908012 -0.65382715]]\n",
+      "\n",
+      "[[-0.65382715 -0.58908012]\n",
+      " [-0.58908012 -1.22661372]]\n"
      ]
     }
    ],
@@ -67,17 +283,22 @@
     "T = integrals.kineticEnergy(h2)\n",
     "print()\n",
     "print(np.matrix(T))\n",
-    "\n",
     "V = integrals.nuclearAttraction(h2)\n",
-    "\n",
-    "print(\"\\n\")\n",
+    "V1 = integrals.electronNuclearAttraction(h2)\n",
+    "print()\n",
+    "print(np.matrix(V1))\n",
+    "print()\n",
     "print(np.matrix(V[0]))\n",
     "print()\n",
-    "print(np.matrix(V[1]))\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(np.matrix(V[1]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
