--- a/hartree_integrals.ipynb
+++ b/hartree_integrals.ipynb
@@ -12,6 +12,13 @@
     "<p>\n",
     "    <br/>\n",
     "    \n",
+    "Within this python script, the wave functions, $\\psi$, that represent atomic wavefunctions are each composed of a set of contracted guassians that are added lineary and multiplied by respective contraction coeffiecents to produce the wavefunction $\\psi$. A guassian is represented as $e^{-\\alpha|R_A|^2}$.  When $\\psi_1$ and $\\psi_2$ are being integrated, $\\int\\psi_1\\psi_2d\\tau$, the resulting integral is the multiplication of two guassians, such that the integration reduces to: $$[\\dfrac{\\pi}{(\\alpha+\\beta)}]^{\\dfrac{3}{2}}\\cdot e^{\\dfrac{-\\alpha\\beta}{\\alpha+\\beta}\\cdot|R_a-R_b|^2}$$\n",
+    "\n",
+    "The rest of this description will focus upon explaining the meaning behind the nomenclature used in variable naming in this script in regrads to the above analytical expansion of $\\int\\psi_1\\psi_2d\\tau$.\n",
+    "\n",
+    "$\\alpha$ and $\\beta$ both refer to the orbital coefficent of a guassian that represents how widespread or narrow the guassian will be. The sum of $\\alpha+\\beta$ is $p$, while the product of $\\alpha\\cdot\\beta$ is $ab$. \n",
+    "    \n",
+    "Located on Page 412 of Szabo.  \n",
     "</p>"
    ]
   },
@@ -95,7 +102,7 @@
     "    This integral computes the kinetic energy of the electrons, which is used in forming the electronic hamiltonian. \n",
     "    <br />\n",
     "    The integral is as follows:\n",
-    "    $$ \\int \\psi^*_A  -\\frac{1}{2}\\nabla^2 \\psi_B d\\tau $$\n",
+    "    $$ \\int \\psi^*_A  (-\\frac{1}{2}\\nabla^2) \\psi_B d\\tau $$\n",
     "    Located on page 427 of Szabo.\n",
     "</p>\n"
    ]
@@ -145,20 +152,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nuclear-Electron Attraction Integral\n",
+    "## Error Function Definition\n",
     "<p>\n",
-    "    <br />\n",
-    "    The nuclear-eclectron attraction integral computes the potential energy surface of the molecule in terms of the attractive forces between the nucli and the electrons. This integral is used to construct the electronic hamiltonian in conjunction with the kinetic energy integral. The final solution to the nuclear-electron attraction is approximated with the error function with an combined with an artificial asymptote at $R=0$.\n",
     "    <br/>\n",
-    "    The integral is as follows:\n",
-    "    $$ \\int \\psi^*_A -\\frac{Z_c}{r_{c}} \\psi_B d\\tau $$\n",
-    "    Located on page 429 of Szabo.\n",
+    "    The error function is defined below to be used in the Nuclear-Electron Attraction and Electron-Electron repulsion integrals.\n",
     "</p>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def errorFunction(errorInput, distance):\n",
+    "    \n",
+    "    if(distance < 10**-50):\n",
+    "         return 1 - (errorInput/3)\n",
+    "    else:\n",
+    "         return 0.5 * pow(math.pi/errorInput, 0.5) * math.erf(pow(errorInput, 0.5))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nuclear-Electron Attraction Integral\n",
+    "<p>\n",
+    "    <br />\n",
+    "    The nuclear-eclectron attraction integral computes the potential energy surface of the molecule in terms of the attractive forces between the nucli and the electrons. This integral is used to construct the electronic hamiltonian in conjunction with the kinetic energy integral. The final solution to the nuclear-electron attraction is approximated with the error function with an combined with an artificial asymptote at $R=0$.\n",
+    "    <br/>\n",
+    "    The integral is as follows:\n",
+    "    $$ \\int \\psi^*_A (-\\frac{Z_c}{r_{c}}) \\psi_B d\\tau $$\n",
+    "    Located on page 429 of Szabo.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,10 +253,11 @@
     "                        #use first error equation to simulate asymptote for very small values\n",
     "                        #but, due to numerical errors with python, small numbers only occurs if index1==index2, but sometimes, such values may be larger, resulting in a negative error that is remedied by the second error equation\n",
     "                        electronNuclearDistance = (cg3.coord - atom.coord).magnitude()\n",
-    "                        if(electronNuclearDistance < 1**-6):\n",
-    "                            error = 1 - (errorInput/3)\n",
-    "                        else:\n",
-    "                            error = 0.5 * pow(math.pi/errorInput, 0.5) * math.erf(pow(errorInput, 0.5))\n",
+    "                        error = errorFunction(errorInput, electronNuclearDistance)\n",
+    "                        #if(electronNuclearDistance < 10**-30):\n",
+    "                         #   error = 1 - (errorInput/3)\n",
+    "                        #else:\n",
+    "                        #    error = 0.5 * pow(math.pi/errorInput, 0.5) * math.erf(pow(errorInput, 0.5))\n",
     "                    \n",
     "                        distances[atomIndex][index1][index2].append(electronNuclearDistance)\n",
     "                        errorInputs[atomIndex][index1][index2].append(errorInput)\n",
@@ -235,19 +269,94 @@
     "                        V[atomIndex][index1][index2] += constant * error * cg1.constant * cg2.constant \n",
     "\n",
     "    \n",
-    "    fig = plt.figure()\n",
-    "    ax = fig.add_subplot(111, projection='3d')\n",
-    "    ax.scatter(errorInputs[0][0][0], distances[0][0][0], errorValues[0][0][0], label = \"A1P1P1\")\n",
-    "    ax.scatter(errorInputs[1][0][1], distances[1][0][1], errorValues[1][0][1], label = \"A1P1P2\")\n",
-    "    ax.scatter(errorInputs[0][1][1], distances[0][1][1], errorValues[0][1][1], label = \"A1P2P2\")\n",
-    "    ax.legend()\n",
+    "    #fig = plt.figure()\n",
+    "    #ax = fig.add_subplot(111, projection='3d')\n",
+    "    #ax.scatter(errorInputs[0][0][0], distances[0][0][0], errorValues[0][0][0], label = \"A1P1P1\")\n",
+    "    #ax.scatter(errorInputs[1][0][1], distances[1][0][1], errorValues[1][0][1], label = \"A1P1P2\")\n",
+    "    #ax.scatter(errorInputs[0][1][1], distances[0][1][1], errorValues[0][1][1], label = \"A1P2P2\")\n",
+    "    #ax.legend()\n",
     "    #ax.scatter(distances[0], errorInputs[0], errorValues[0])\n",
-    "    #plt.plot(distances[0][1][0], errorValues[0][1][0], 'rs', label=\"Error Input\")\n",
+    "    plt.plot(distances[0][0][0], errorValues[0][0][0], 'rs', label=\"A1e1e1\")\n",
+    "    plt.plot(distances[0][1][0], errorValues[0][1][0], 'gd', label=\"A1e2e1\")\n",
+    "    plt.plot(distances[0][1][1], errorValues[0][1][1], 'bp', label=\"A1H2H2\")\n",
     "   # plt.plot(distances[0][0][1], errorValues[0][0][1], 'b^', label=\"Error Input\")\n",
     "   # plt.plot(errorInputs[], errorInputs[1], 'r^', label=\"Error Input\")\n",
-    "\n",
+    "    plt.legend()\n",
     "    \n",
     "    return V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Electron-Electron Repulsion Integral\n",
+    "\n",
+    "<p>\n",
+    "    <br/>\n",
+    "    This integral computes the energy that each electrons feels towards all other electrons near it. Also called the four center integral because it involves integrating over four wavefunctions simultaneously.\n",
+    "    <br/>\n",
+    "    The integral is as follows: $$\\int\\psi^*_{A1}\\psi^*_{B1}(\\dfrac{1}{r_{12}})\\psi_{C2}\\psi_{D3} d\\tau_1d\\tau_2$$\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def electronElectronRepulsion(molecule):\n",
+    "    \n",
+    "    #init electron-electron repulsion list \n",
+    "    electronRepulsion = []\n",
+    "\n",
+    "    #iterate through PsiA1PsiA2 and PsiB1PsiB2\n",
+    "    for index1, atom1 in enumerate(molecule.atomData):\n",
+    "        electronRepulsion.append([])\n",
+    "        for index2, atom2 in enumerate(molecule.atomData):\n",
+    "            electronRepulsion[index1].append([])\n",
+    "            \n",
+    "            #prepare atomic basis sets\n",
+    "            psi1 = atom1.basisSet\n",
+    "            psi2 = atom2.basisSet\n",
+    "            \n",
+    "            for index3, atom3 in enumerate(molecule.atomData):\n",
+    "                electronRepulsion[index1][index2].append([])\n",
+    "                for index4, atom4 in enumerate(molecule.atomData):\n",
+    "                    electronRepulsion[index1][index2][index3].append(0)\n",
+    "                    \n",
+    "                    #prepare atomic basissets\n",
+    "                    psi3 = atom3.basisSet\n",
+    "                    psi4 = atom4.basisSet\n",
+    "\n",
+    "                    #iterate through all of the primative guassians for each of the wavefunctions\n",
+    "                    for cg1 in psi1.contractedGuassians:\n",
+    "                        for cg2 in psi2.contractedGuassians:\n",
+    "                            for cg3 in psi3.contractedGuassians:\n",
+    "                                for cg4 in psi4.contractedGuassians:\n",
+    "\n",
+    "                                    pA = cg1.orbitalExponet + cg2.orbitalExponet\n",
+    "                                    pB = cg3.orbitalExponet + cg4.orbitalExponet\n",
+    "                                    abA = cg1.orbitalExponet * cg2.orbitalExponet\n",
+    "                                    abB = cg3.orbitalExponet * cg4.orbitalExponet\n",
+    "                                    \n",
+    "                                    pAB = pA + pB\n",
+    "\n",
+    "                                    term1 = (2 * pow(math.pi, 5/2)) / (pA*pB*pow(pAB, 1/2))\n",
+    "                                    distanceAB = pow( (cg1.coord - cg2.coord).magnitude(), 2)\n",
+    "                                    distanceCD = pow( (cg3.coord - cg4.coord).magnitude(), 2)\n",
+    "                                    e = ((-abA/pA) * distanceAB) - ( (abB/pB) * distanceCD )\n",
+    "                                    cgAB = cg1.multiply(cg2)\n",
+    "                                    cgCD = cg3.multiply(cg4)\n",
+    "                                    distanceABCD = (cgAB.coord - cgCD.coord).magnitude()\n",
+    "                                    errorInput = ( (pA * pB) / pAB) * pow(distanceABCD, 2)\n",
+    "                                    error = errorFunction(errorInput, distanceABCD)\n",
+    "        \n",
+    "                                    constant = cg1.constant * cg2.constant * cg3.constant * cg4.constant * cg1.contraction * cg2.contraction * cg3.contraction * cg4.contraction\n",
+    "                                   \n",
+    "                                    electronRepulsion[index1][index2][index3][index4] += term1 * math.exp(e) * error * constant\n",
+    "    return electronRepulsion                    "
    ]
   }
  ],
