--- a/hartree_integrals.ipynb
+++ b/hartree_integrals.ipynb
@@ -16,7 +16,8 @@
     "\n",
     "The rest of this description will focus upon explaining the meaning behind the nomenclature used in variable naming in this script in regrads to the above analytical expansion of $\\int\\psi_1\\psi_2d\\tau$.\n",
     "\n",
-    "$\\alpha$ and $\\beta$ both refer to the orbital coefficent of a guassian that represents how widespread or narrow the guassian will be. The sum of $\\alpha+\\beta$ is $p$, while the product of $\\alpha\\cdot\\beta$ is $ab$. \n",
+    "$\\alpha$ and $\\beta$ both refer to the orbital coefficent of a guassian that represents how widespread or narrow the guassian will be. The sum of $\\alpha+\\beta$ is $p$, while the product of $\\alpha\\cdot\\beta$ is $ab$. The variable <i>constant</i> refers to all constants that can be taken out of the integral and are multipled at the end of the analytical integration method, and is composed of the contraction coefficents for the guassians, and the normalization constants, which are equal to\n",
+    "$(\\dfrac{2\\alpha}{\\pi})^{3/4}$. Any variables named <i>c</i> followed by a number represent a constant that can be pulled out of the integral, and is multiplied into the general <i>constant</i> variable, and may also be used in computing another portion of the integral. Any variable with the name <i>distance</i> refers to the distance between two primative guassians. <i>e</i> refers to some value that is taken to the power of $e$ and is multipled into the integral. <i>term</i> variables followed by a number represent a specific computaional portion of the integral that is placed into a variable to produce a more legiblie code. \n",
     "    \n",
     "Located on Page 412 of Szabo.  \n",
     "</p>"
@@ -41,11 +42,11 @@
     "\n",
     "<p> \n",
     "    <br/>\n",
-    "    The overlap integral describes the amount of overlap bwetween two atomic orbitals. The value ranges from 1 to 0, with zero meaning there is no overlap between the orbitals, and 1 meaning the orbitals are the same and overlap exactly. \n",
+    "    The overlap integral describes the amount of overlap bwetween two atomic orbitals. The value ranges from 1 to 0, with zero meaning there is no overlap between the orbitals, and 1 meaning the orbitals are the same and overlap exactly. The overlap is used to determine bonding between atoms, and to construct the molecular orbitals. \n",
     "    <br/> \n",
     "    The overlap integral is computed as follows: \n",
     "    $$\\int \\Psi^*_A\\Psi_B  d\\tau $$\n",
-    "    Reference is Page 412 of Szabo\n",
+    "    Located on Page 412 of Szabo\n",
     "</p>"
    ]
   },
@@ -137,13 +138,13 @@
     "                \n",
     "                    ab = cg1.orbitalExponet * cg2.orbitalExponet\n",
     "                    p = cg1.orbitalExponet + cg2.orbitalExponet\n",
+    "                    distanceSquared = pow((cg1.coord - cg2.coord).magnitude(), 2)\n",
     "                    c1 = ab / p \n",
     "                    c2 = pow(math.pi / p, 3/2)\n",
-    "                    distanceSquared = pow((cg1.coord - cg2.coord).magnitude(), 2)\n",
     "                    e = math.exp(-c1*distanceSquared)\n",
-    "                    constant = cg1.contraction * cg2.contraction * cg1.constant * cg2.constant\n",
+    "                    constant = cg1.contraction * cg2.contraction * cg1.constant * cg2.constant * c1 * c2\n",
     "                   \n",
-    "                    T[index1][index2] += constant * c1 * (3 - (2*c1*distanceSquared) ) * c2 * e\n",
+    "                    T[index1][index2] += constant * (3 - (2*c1*distanceSquared) ) * e\n",
     "    \n",
     "    return T"
    ]
@@ -181,7 +182,7 @@
     "## Nuclear-Electron Attraction Integral\n",
     "<p>\n",
     "    <br />\n",
-    "    The nuclear-eclectron attraction integral computes the potential energy surface of the molecule in terms of the attractive forces between the nucli and the electrons. This integral is used to construct the electronic hamiltonian in conjunction with the kinetic energy integral. The final solution to the nuclear-electron attraction is approximated with the error function with an combined with an artificial asymptote at $R=0$.\n",
+    "    The nuclear-eclectron attraction integral computes the potential energy surface of the molecule in terms of the attractive forces between the nucli and the electrons. This integral is used to construct the electronic hamiltonian in conjunction with the kinetic energy integral. The final solution to the nuclear-electron attraction is approximated with the error function combined with an artificial asymptote at $R=0$.\n",
     "    <br/>\n",
     "    The integral is as follows:\n",
     "    $$ \\int \\psi^*_A (-\\frac{Z_c}{r_{c}}) \\psi_B d\\tau $$\n",
@@ -207,8 +208,7 @@
     "    errorValues = []\n",
     "    \n",
     "    #iterate through all atoms for Z\n",
-    "    for atomIndex, atom in enumerate(molecule.atomData):\n",
-    "        \n",
+    "    for atomIndex, atom in enumerate(molecule.atomData):        \n",
     "        V.append([])\n",
     "\n",
     "        #prepare graph lists\n",
@@ -220,6 +220,7 @@
     "        for index1, atom1 in enumerate(molecule.atomData):\n",
     "            V[atomIndex].append([])\n",
     "            \n",
+    "            #prepare graph lists\n",
     "            distances[atomIndex].append([])\n",
     "            errorInputs[atomIndex].append([])\n",
     "            errorValues[atomIndex].append([])\n",
@@ -227,6 +228,7 @@
     "            for index2, atom2 in enumerate(molecule.atomData):\n",
     "                V[atomIndex][index1].append(0)\n",
     "                \n",
+    "                #prepare graph lists\n",
     "                distances[atomIndex][index1].append([])\n",
     "                errorInputs[atomIndex][index1].append([])\n",
     "                errorValues[atomIndex][index1].append([])\n",
@@ -254,33 +256,18 @@
     "                        #but, due to numerical errors with python, small numbers only occurs if index1==index2, but sometimes, such values may be larger, resulting in a negative error that is remedied by the second error equation\n",
     "                        electronNuclearDistance = (cg3.coord - atom.coord).magnitude()\n",
     "                        error = errorFunction(errorInput, electronNuclearDistance)\n",
-    "                        #if(electronNuclearDistance < 10**-30):\n",
-    "                         #   error = 1 - (errorInput/3)\n",
-    "                        #else:\n",
-    "                        #    error = 0.5 * pow(math.pi/errorInput, 0.5) * math.erf(pow(errorInput, 0.5))\n",
     "                    \n",
+    "                        #add data for graphing purposes\n",
     "                        distances[atomIndex][index1][index2].append(electronNuclearDistance)\n",
     "                        errorInputs[atomIndex][index1][index2].append(errorInput)\n",
     "                        errorValues[atomIndex][index1][index2].append(error)\n",
-    "                        #distances[atomIndex].append(electronNuclearDistance)\n",
-    "                        #errorInputs[atomIndex].append(errorInput)\n",
-    "                        #errorValues[atomIndex].append(error)\n",
     "                        \n",
     "                        V[atomIndex][index1][index2] += constant * error * cg1.constant * cg2.constant \n",
-    "\n",
     "    \n",
-    "    #fig = plt.figure()\n",
-    "    #ax = fig.add_subplot(111, projection='3d')\n",
-    "    #ax.scatter(errorInputs[0][0][0], distances[0][0][0], errorValues[0][0][0], label = \"A1P1P1\")\n",
-    "    #ax.scatter(errorInputs[1][0][1], distances[1][0][1], errorValues[1][0][1], label = \"A1P1P2\")\n",
-    "    #ax.scatter(errorInputs[0][1][1], distances[0][1][1], errorValues[0][1][1], label = \"A1P2P2\")\n",
-    "    #ax.legend()\n",
-    "    #ax.scatter(distances[0], errorInputs[0], errorValues[0])\n",
+    "    #add data to graph and display it\n",
     "    plt.plot(distances[0][0][0], errorValues[0][0][0], 'rs', label=\"A1e1e1\")\n",
     "    plt.plot(distances[0][1][0], errorValues[0][1][0], 'gd', label=\"A1e2e1\")\n",
     "    plt.plot(distances[0][1][1], errorValues[0][1][1], 'bp', label=\"A1H2H2\")\n",
-    "   # plt.plot(distances[0][0][1], errorValues[0][0][1], 'b^', label=\"Error Input\")\n",
-    "   # plt.plot(errorInputs[], errorInputs[1], 'r^', label=\"Error Input\")\n",
     "    plt.legend()\n",
     "    \n",
     "    return V"
@@ -309,6 +296,7 @@
     "def electronElectronRepulsion(molecule):\n",
     "    \n",
     "    #init electron-electron repulsion list \n",
+    "    #constructs a tensor equal to the size of the basis set squared\n",
     "    electronRepulsion = []\n",
     "\n",
     "    #iterate through PsiA1PsiA2 and PsiB1PsiB2\n",
