Adds cleaned up code and fixes SCF failure errors

--- a/hartree_scf.ipynb
+++ b/hartree_scf.ipynb
@@ -112,7 +112,7 @@
     "    X = np.zeros([size, size])\n",
     "    \n",
     "    #diagnolize S to obtain eigenvalues and vector\n",
-    "    eigenValues, eigenVectors = np.linalg.eig(S)\n",
+    "    eigenValues, eigenVectors = np.linalg.eigh(S)\n",
     "    \n",
     "    X = eigenVectors * (eigenValues ** -0.5)\n",
     "    \n",
@@ -149,6 +149,41 @@
     "        for v in range(size):\n",
     "               E += P[v, u] * ( H[u, v] + F[u, v] )\n",
     "    return E * 0.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nuclear-Nuclear Repulsion\n",
+    "\n",
+    "<p>\n",
+    "    <br />\n",
+    "    The amount of comlumbic repulsion two nucli will experiance due to their positive charges. Equation on page 165 of Szabo.\n",
+    "    $$ V_{ij} = \\dfrac{Z_{i}Z_{j}}{|r_i - r_j|} $$\n",
+    "</p>    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nuclearRepulsion(molecule):\n",
+    "    \n",
+    "    repulsion = 0\n",
+    "    \n",
+    "    #iterate through all atoms present\n",
+    "    for atom1 in molecule.atomData:\n",
+    "        for atom2 in molecule.atomData:\n",
+    "        \n",
+    "            if(atom1 == atom2):\n",
+    "                continue\n",
+    "                \n",
+    "            repulsion += (atom1.Z * atom2.Z) / (atom1.coord - atom2.coord).magnitude()\n",
+    "            \n",
+    "    return repulsion * 0.5"
    ]
   }
  ],
